# SO_PR3

./: .gitignore  BigBullet.h  CMakeLists.txt  Direction.h  Game_actor.cpp  Game_actor.h  Player.cpp  README.md  SmallBullet.cpp
src/: BigAlienShip.cpp  BigAlienShip.h  BigBullet.cpp  BigBullet.h  Direction.h  EnemyBig.cpp  EnemyBig.h  EnemyBigObserver.cpp  EnemyBigObserver.h  EnemySmall.cpp  EnemySmall.h  Enemy_big_slow.cpp  Enemy_big_slow.h  Enemy_small_fast.cpp  Enemy_small_fast.h  GameActor.cpp  GameActor.h  GameObject.cpp  GameObject.h  Game_actor.cpp  Game_actor.h  Player.cpp  Player.h  Shield.cpp  Shield.h  ShipWreck.cpp  ShipWreck.h  SmallAlienShip.cpp  SmallAlienShip.h  SmallBullet.cpp  SmallBullet.h  main.cpp
