cmake_minimum_required(VERSION 3.6)
project(SO_PR3)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
SET(CMAKE_CXX_FLAGS "-std=c++14 -pthread")
set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES)
add_executable(SO2_PR3 ${SOURCE_FILES})
target_link_libraries(SO2_PR3 ${CURSES_LIBRARIES})